# text-embeddings-inference

./: .pre-commit-config.yaml  Cargo.toml
backends/candle/: Cargo.toml
backends/candle/src/: lib.rs
backends/candle/tests/: common.rs  test_bert.rs  test_dense.rs  test_flash_bert.rs  test_flash_gte.rs  test_flash_jina.rs  test_flash_jina_code.rs  test_flash_mistral.rs  test_flash_nomic.rs  test_flash_qwen2.rs  test_flash_qwen3.rs  test_gemma3.rs  test_gte.rs  test_jina.rs  test_jina_code.rs  test_modernbert.rs  test_mpnet.rs  test_nomic.rs  test_qwen3.rs
backends/python/server/: pyproject.toml  requirements.txt
backends/src/: dtype.rs  lib.rs
router/: Cargo.toml
router/src/: lib.rs
