[package]
name = "text-embeddings-backend-candle"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
accelerate-src = { version = "0.3.2", optional = true }
intel-mkl-src = { version = "0.8.1", optional = true  }
#candle = { version = "*", package = "candle-core", default-features = false }
#candle-nn = { version = "*" }
#candle-transformers = { version = "*" }
candle = { git = "https://github.com/spiceai/candle.git", version = "0.8", rev = "a84593f1951a4a9083e29257003a8112eb1450da", package = "candle-core", default-features = false }
candle-nn = { git = "https://github.com/spiceai/candle.git", version = "0.8", rev = "a84593f1951a4a9083e29257003a8112eb1450da" }
candle-transformers = { git = "https://github.com/spiceai/candle.git", version = "0.8", rev = "a84593f1951a4a9083e29257003a8112eb1450da" }
candle-flash-attn = { version = "*", optional = true }
candle-flash-attn-v1 = { git = "https://github.com/huggingface/candle-flash-attn-v1", rev = "3f1870b0d708579904c76e41745c659c3f9fa038", optional = true }
candle-cublaslt = {git = "https://github.com/spiceai/candle-cublaslt", rev = "cd6c1385be55ea83c3c3990a3f04abeb43da66ee", optional = true }
cudarc = { git = "https://github.com/EricLBuehler/cudarc", rev = "f6e5bf51153d40e34eb1262b98895ac1235b6422", optional = true }
candle-layer-norm = { git = "https://github.com/spiceai/candle-layer-norm", rev = "692dd850c2553189737beb30e795197f173b9498", optional = true }
candle-rotary = { git = "https://github.com/spiceai/candle-rotary", rev = "afe51dfb57ecf6569b9db45295c490af523c5818", optional = true }
nohash-hasher = { workspace = true }
text-embeddings-backend-core = { path = "../core" }
tracing = { workspace = true }
safetensors = "^0.4"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
memmap2 = "^0.9"
tokenizers = { workspace = true }

[dev-dependencies]
insta = { git = "https://github.com/OlivierDehaene/insta", rev = "f4f98c0410b91fb5a28b10df98e4422955be9c2c", features = ["yaml"] }
is_close = "0.1.3"
hf-hub = "0.3.2"
anyhow = { workspace = true }
serial_test = "2.0.0"

[build-dependencies]
anyhow = { version = "1", features = ["backtrace"] }

[features]
accelerate = ["dep:accelerate-src", "candle/accelerate", "candle-nn/accelerate"]
metal = ["candle/metal", "candle-nn/metal"]
mkl = ["dep:intel-mkl-src", "intel-mkl-src/mkl-static-lp64-iomp", "candle/mkl", "candle-nn/mkl"]
mkl-dynamic = ["dep:intel-mkl-src", "intel-mkl-src/mkl-dynamic-lp64-iomp", "candle/mkl-dynamic", "candle-nn/mkl-dynamic"]
cuda = ["candle/cuda", "candle-nn/cuda", "dep:candle-cublaslt", "dep:candle-layer-norm", "dep:candle-rotary", "dep:cudarc" ]
flash-attn-v1 = ["dep:candle-flash-attn-v1", "cuda"]
flash-attn = ["dep:candle-flash-attn", "cuda"]
static-linking = ["candle-cublaslt?/static-linking"]
