[package]
name = "text-embeddings-backend-candle"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
accelerate-src = { version = "0.3.2", optional = true }
intel-mkl-src = { version = "0.8.1", optional = true  }
#candle = { version = "*", package = "candle-core", default-features = false }
#candle-nn = { version = "*" }
#candle-transformers = { version = "*" }
candle = { git = "https://github.com/spiceai/candle.git", version = "0.8", rev = "d182e6f3a114a34c1dd56b6cbb36c89c111d2d45", package = "candle-core", default-features = false }
candle-nn = { git = "https://github.com/spiceai/candle.git", version = "0.8", rev = "d182e6f3a114a34c1dd56b6cbb36c89c111d2d45" }
candle-transformers = { git = "https://github.com/spiceai/candle.git", version = "0.8", rev = "d182e6f3a114a34c1dd56b6cbb36c89c111d2d45" }
candle-flash-attn = { version = "*", optional = true }
candle-flash-attn-v1 = { git = "https://github.com/huggingface/candle-flash-attn-v1", rev = "3f1870b0d708579904c76e41745c659c3f9fa038", optional = true }
candle-cublaslt = {git = "https://github.com/spiceai/candle-cublaslt", rev = "8b0f181daf2f1a8a3eacf918a2ef5f19d7bb8033", optional = true }
cudarc = { version = "0.13", optional = true }
candle-layer-norm = { git = "https://github.com/spiceai/candle-layer-norm", rev = "fbdeae152b71ab8e8276841664d311f0fdc4b502", optional = true }
candle-rotary = { git = "https://github.com/spiceai/candle-rotary", rev = "64b11fde5f0ca872cbdc7e7a8d588bfa401f93f5", optional = true }
nohash-hasher = { workspace = true }
text-embeddings-backend-core = { path = "../core" }
tracing = { workspace = true }
safetensors = "^0.4"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
memmap2 = "^0.9"
tokenizers = { workspace = true }

[dev-dependencies]
insta = { git = "https://github.com/OlivierDehaene/insta", rev = "f4f98c0410b91fb5a28b10df98e4422955be9c2c", features = ["yaml"] }
is_close = "0.1.3"
hf-hub = "0.3.2"
anyhow = { workspace = true }
serial_test = "2.0.0"

[build-dependencies]
anyhow = { version = "1", features = ["backtrace"] }

[features]
accelerate = ["dep:accelerate-src", "candle/accelerate", "candle-nn/accelerate"]
metal = ["candle/metal", "candle-nn/metal"]
mkl = ["dep:intel-mkl-src", "intel-mkl-src/mkl-static-lp64-iomp", "candle/mkl", "candle-nn/mkl"]
mkl-dynamic = ["dep:intel-mkl-src", "intel-mkl-src/mkl-dynamic-lp64-iomp", "candle/mkl-dynamic", "candle-nn/mkl-dynamic"]
cuda = ["candle/cuda", "candle-nn/cuda", "dep:candle-cublaslt", "dep:candle-layer-norm", "dep:candle-rotary", "dep:cudarc" ]
flash-attn-v1 = ["dep:candle-flash-attn-v1", "cuda"]
flash-attn = ["dep:candle-flash-attn", "cuda"]
static-linking = ["candle-cublaslt?/static-linking"]
