[package]
name = "text-embeddings-backend-candle"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
accelerate-src = { version = "0.3.2", optional = true }

# candle = { version = "*", package = "candle-core", default-features = false }
# candle-nn = { version = "*" }
# candle-transformers = { version = "*" }
# candle-flash-attn = { version = "*", optional = true }
# candle-flash-attn-v1 = { git = "https://github.com/huggingface/candle-flash-attn-v1", rev = "3f1870b0d708579904c76e41745c659c3f9fa038", optional = true }
# candle-cublaslt = {git = "https://github.com/spiceai/candle-cublaslt", rev = "147f4424b0567131c41cf1ee667645120682170b", optional = true }
# cudarc = { git = "https://github.com/EricLBuehler/cudarc", rev = "f6e5bf51153d40e34eb1262b98895ac1235b6422", optional = true }
# candle-layer-norm = { git = "https://github.com/spiceai/candle-layer-norm", rev = "88b9ffdd7077fce11d3f6cb77bbe7093269631fe", optional = true }
# candle-rotary = { git = "https://github.com/spiceai/candle-rotary", rev = "8a437f99881bd4803f61c7c16ed4367f7cab76fc", optional = true }
intel-mkl-src = { workspace = true, optional = true }
candle = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
candle-flash-attn = { workspace = true, optional = true }
candle-flash-attn-v1 = { workspace = true, optional = true }
candle-cublaslt = { workspace = true, optional = true }
candle-layer-norm = { workspace = true, optional = true }
candle-rotary = { workspace = true, optional = true }
nohash-hasher = { workspace = true }
text-embeddings-backend-core = { path = "../core" }
tracing = { workspace = true }
safetensors = "^0.4"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
memmap2 = "^0.9"
tokenizers = { workspace = true }

[dev-dependencies]

insta = { git = "https://github.com/OlivierDehaene/insta", rev = "f4f98c0410b91fb5a28b10df98e4422955be9c2c", features = [
    "yaml",
] }
is_close = "0.1.3"
hf-hub = { workspace = true, features = ["ureq"] }
anyhow = { workspace = true }
tokenizers = { workspace = true }
serial_test = { workspace = true }
[build-dependencies]
anyhow = { version = "1", features = ["backtrace"] }

[features]

# mkl = [
#     "dep:intel-mkl-src",
#     "intel-mkl-src/mkl-static-lp64-iomp",
#     "candle/mkl",
#     "candle-nn/mkl",
# ]
accelerate = ["dep:accelerate-src", "candle/accelerate", "candle-nn/accelerate"]
metal = ["candle/metal", "candle-nn/metal"]
# mkl-dynamic = [
#     "dep:intel-mkl-src",
#     "intel-mkl-src/mkl-dynamic-lp64-iomp",
#     "candle/mkl-dynamic",
#     "candle-nn/mkl-dynamic",
# ]
# cuda = [
#     "candle/cuda",
#     "candle-nn/cuda",
#     "dep:candle-cublaslt",
#     "dep:candle-layer-norm",
#     "dep:candle-rotary",
#     "dep:cudarc",
# ]
mkl = ["dep:intel-mkl-src", "candle/_mkl"]
cuda = [
    "candle/cuda",
    "candle-nn/cuda",
    "dep:candle-cublaslt",
    "dep:candle-layer-norm",
    "dep:candle-rotary",
]
flash-attn-v1 = ["dep:candle-flash-attn-v1", "cuda"]
flash-attn = ["dep:candle-flash-attn", "cuda"]
